--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "compression": "^1.7.4",
+    "ejs": "^3.0.1",
     "express": "^4.17.1",
     "handlebars": "^4.7.3",
     "react": "^16.12.0",
