--- a/package.json
+++ b/package.json
@@ -31,7 +31,13 @@
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.5.3",
+    "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.3.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "nodemon": "^2.0.2",
+    "raw-loader": "^4.0.1",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11"
   },
